week5 newsletter draft

--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,6 +225,218 @@
     </section> <!-- end Week n section //>
     -->
 
+    <section class="news bg-light-gray">  <!-- begin Week 5 section -->
+        <div class="container">
+            <h2>Week 5</h2>
+            <h4>Fun with Functions</h4>
+            <p>
+                We're surrounded by black boxes&mdash;tools that <i>just work</i> when used to complete a task. To most of us, cars are black boxes getting us from point A to point B; TVs are black boxes streaming video and audio into our living room; and phones are black boxes connecting us to our friends and family through social media, texts and calls. Black boxes make our world better&mdash;they make complex tasks easy and empower us to accomplish more with less time and energy. It's impossible to imagine modern life without them!
+            </p>
+            <p>
+                In computer science, these black boxes take the form of <i>functions</i>&mdash;structures that hide the details of a complex task behind a simple statement. Functions <i>just work</i>, allowing us to think about other, higher-level concepts when writing code. This week, our coders learned how to write and call their own functions in Python&mdash;though you might just say they had fun with functions!
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Bonus Hour</h4>
+                <p>
+                    We'll be continuing to host a Bonus Hour every Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814"> zoom</a> (password: see email)</li>
+                </ul>
+                <h4>2. Curriculum Check-In</h4>
+                <p>
+                    We'll be dedicating the majority of Week 6 to review the content we've covered in Weeks 1-5! We'll also spend a few minutes brainstorming ideas for final projects, which students will be working on in Week 7 and presenting at our final session in Week 8. If you missed a previous week's lesson or are feeling behind, hang in there and join us at Bonus Hour, then again this Saturday. We'll make sure you're caught up&mdash;no Technovator will be left behind!
+                </p>
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 10/29 at 10:30a ET for our sixth Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. Looking further ahead, we'll be meeting every Saturday through 11/19 at 10:30a ET.
+                </p>
+                <h4>4. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                In-Person Students kicked off Saturdays's session with a Spotlight from one of our mentors, Jonathon! The students were able to see the games Jonathon has developed and even got a chance to play them!          
+            </p>
+            <span class="image main"><img src="assets/img/week5/spotlight.png" alt="Jonathon Spotlight!"></span>
+            <p>
+                In this week's spotlight, Virtual-Technovation met Sophia: the first robot declared a citizen by Saudi Arabia! Student's learned what defines Artifical Intelligence: the ability for a computer to think and learn. With AI, computers can perform tasks that are typically done by people. Ask your students about how Artificial Intelligence is used to create Sophia!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle">
+                        <iframe width="800" height="450" src="https://www.youtube.com/embed/E8Ox6H64yu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Meet Sophia, the first robot declared a citizen by Saudi Arabia!</i></p>
+                </div>
+            </div>
+            <p>
+                Following our Spotlight, mentors introduced functions! Functions allow us to simplify our code by serving as black boxes: they hide the complexities of a task behind a single statement and allow us to think about higher-level concepts when writing code. In a sense, functions teach Tracy the Turtle new tricks!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week501.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week502.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week503.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week504.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i><p><i>Functions are a key foundation in programming&mdash;ask your student why!</i></p>
+                </div>
+            </div>
+            <p>
+                More on Functions!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week505.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week5/week506.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <p><i>Ask your student what their favorite thing is about functions!</i></p>
+                </div>
+            </div>
+            <p>
+                Next Saturday, we'll be reviewing content from Weeks 1-5&mdash;including loops, functions, variables, and user input&mdash;then brainstorming ideas for final projects, which students will be working on in Week 7 and 8 and presenting at our final session in Week 9. We've covered a lot of ground in our first 5 weeks&mdash;tell your student to give themselves a pat on the back for all their hard work!
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Advisor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our lead faculty advisors, Dr. Laura Dillon, Sebnem Onsay, and Teresa Isela VanderSloot!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-4" align="middle"> <!-- Laura -->
+                        <img class="shadow-lg" src="assets/img/photos/LaurieCSforALL.jpg" width=70%>
+                        <br><br>
+                        <p><i>Dr. Laura Dillon (Lead Lansing Advisor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Onsay -->
+                        <img class="shadow-lg" src="assets/img/photos/Onsay.Sebnem750x1000_72R.jpg" width=70%>
+                        <br><br>
+                        <p><i>Sebnem Onsay (Lead Detroit Advisor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Teresa -->
+                        <img class="shadow-lg" src="assets/img/photos/FS19Teresa750x1000_78R.jpg" width=70%>
+                        <br><br>
+                        <p><i>Teresa Isela VanderSloot (Lead All Michigan Advisor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4" align="left"> <!-- Laura -->
+                        <p>
+                            <b>What did you study?</b><br>
+                            I received my PhD in Computer Science from the University of Massachusetts, Amherst in 1984!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            The first time I ever learned anything about computing was in 1970.  A sophomore majoring in math at Kalamazoo College, I took a class on programming in Fortran. The next year I transferred to UMich, where math majors had to also have a 'cognate' (minor). Since I liked my programming class at K, I decided to make computing my cognate at UMich, learning Cobol and Algol. After graduation I had a chance to teach programming and math at Eastern Montana College. By that time I had flipped my allegiances. I still liked math, but I loved computing!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I taught coding and IT at a week-long residential summer camp for secondary school girls and their teachers in Rwanda for three summers. It was the opportunity of a lifetime to work with the Peace Corps in Rwanda on empowering young women in a third world country to pursue educations in technology!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I think that code can play a role in uplifting all who want to make their world a better, and more equitable one. I hope to uplift a few, who will uplift more, who will uplift even more, ...
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            You can and will do amazing things if you continue exploring and learning. It's never too late to take the first step!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Onsay -->
+                        <p>
+                            <b>What did you study?</b><br>
+                            I received 2 B.S. degrees, one from Hacettepe University and one from Eastern Michigan University, then an M.S. in Computer Science and Engineering from Oakland University!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            Loved math, and CSE was all about applying math tricks! :)
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I worked on Statistical Energy Analysis with mechanical engineers, using this tool to make cars quieter. I used C# to create their models; it was pure object-oriented-programming. Loved it!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I want to be better at what I do; I constantly look for new ways to teach and engage my students. Recently, I have been applying the flipped learning techniques to my Algorithms and Data Structures class. Next step will be incorporating peer programming.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Love what you do and do what you love.
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Teresa -->
+                        <p>
+                            <b>What did you study?</b><br>
+                            I received my B.S. from Grand Valley State University, followed by my M.S. in Administration from Central Michigan University!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I was the computer science advisor for ten years here at MSU!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            As an advisor, it was so exciting to see the numerous job opportunities which were available to my CS students. There are even more out there today!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I am honored to partner with passionate undergraduate students, faculty, alumni and professionals to offer CS outreach to K-12 students. Regardless of which career you will pursue, learning how to code will help you.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Be courageous. Don't be afraid to ask questions; you will not only be helping yourself, but others as well.
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                Enjoy the last few days of late sunsets before we fall back this weekend, Technovators. We'll see you Saturday for Week 6!
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 5 section -->
+    
     <section class="news bg-white">  <!-- begin Week 4 section -->
         <div class="container">
             <h2>Week 4</h2>
