--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -252,7 +252,7 @@
                 </ul>
                 <h4>2. Curriculum Check-In</h4>
                 <p>
-                    We'll be dedicating the majority of Week 6 to review the content we've covered in Weeks 1-5! We'll also spend a few minutes brainstorming ideas for final projects, which students will be working on in Week 7 and presenting at our final session in Week 8. If you missed a previous week's lesson or are feeling behind, hang in there and join us at Bonus Hour, then again this Saturday. We'll make sure you're caught up&mdash;no Technovator will be left behind!
+                    We'll be dedicating the majority of Week 6 to review the content we've covered in Weeks 1-5! We'll also spend a few minutes brainstorming ideas for final projects, which students will be working on in Week 7 and 8 and presenting at our final session in Week 9. If you missed a previous week's lesson or are feeling behind, hang in there and join us at Bonus Hour, then again this Saturday. We'll make sure you're caught up&mdash;no Technovator will be left behind!
                 </p>
                 <h4>3. Looking Ahead</h4>
                 <p>
