--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -213,6 +213,8 @@
                 <li><a href="Fall2022/InPersonLessons/Week4-LoopsFunctions.pdf" target="_blank">Week 4</a></li>
 
                 <li><a href="Fall2022/InPersonLessons/Week5-LoopsFunctions.pdf" target="_blank">Week 5</a></li>
+                
+                <li><a href="Fall2022/InPersonLessons/Week6-Lesson.pdf" target="_blank">Week 6</a></li>
             </ul>
             <p>
                 <b>Virtual Lessons</b>
