--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,6 +225,152 @@
     </section> <!-- end Week n section //>
     -->
 
+    <section class="news bg-white">  <!-- begin Week 6 section -->
+        <div class="container">
+            <h2>Week 6</h2>
+            <h4>All Part of the Plan</h4>
+            <p>
+                Success begins with a plan for success&mdash;to win a sporting match, ace a test, or learn a new skill, we must begin with a plan. Positive planning is powerful!
+            </p>
+            <p>
+                This week, students review basics, loops, and functions. Students were also introduced to their final projects! Next Saturday, students will begin to start implementing these final projects by leveraging their newfound Python knowledge.
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Bonus Hour</h4>
+                <p>
+                    We'll be continuing to host a Bonus Hour every Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814"> zoom</a> (password: see email)</li>
+                </ul>
+                <h4>2. Curriculum Check-In</h4>
+                <p>
+                    We'll be dedicating majority of Week 7 to practicing more user-input and we'll also spend some time brainstorming the project which students will be presenting Week 9! If you missed a previous week's lesson or are feeling behind, hang in there and join us at Bonus Hour, then again this Saturday. We'll make sure you're caught up&mdash;no Technovator will be left behind!
+                </p>
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 11/5 at 10:30a ET for our sixth Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. Looking further ahead, we'll be meeting every Saturday through 11/19 at 10:30a ET.
+                </p>
+                <h4>4. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                <b>Virtual</b> Students broke the ice by doing their very own Virtual Escape Room!
+                <a href="https://roomescapemaker.com/u/demo/dogescape">Dog Escape</a>,
+                Students and mentors had a lot of fun in the escape room and definitely allowed for a fun way to start Saturday's session!
+            </p>
+            <span class="image main"><img src="assets/img/week6/escape.png" alt="Dog Escape!"></span>
+
+            <p>
+                <b>In-Person</b> Students broke the ice by creating and sharing their very own works of digital art this week!
+                <a href="https://sandspiel.club/">Sandspiel</a>,
+                <a href="https://artsexperiments.withgoogle.com/draw-to-art">Google's Draw to Art</a>, and
+                <a href="https://paveldogreat.github.io/WebGL-Fluid-Simulation/">WebGL Fluid Simulation</a>
+                are all great examples of how computer science cuts across disciplinary boundaries&mdash;code empowers artists to create, share, and innovate in their art. We often draw a line between the arts &amp; humanities and technology&mdash;but the two are closer than ever in today's day and age!
+            </p>
+    
+            <p>
+                After Icebreaker's from Virtual and In-Person Cohorts, we jumped into a review of loops, functions, variables, user input, and all of the other programming concepts we've covered this fall using Kahoot. A bit of friendly competition is always a good time&mdash;everyone wins when we learn together!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/kahoot1.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/kahoot2.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <p><i>Looking for some extra practice with the coding concepts we've learned this fall? <a href="https://play.kahoot.it/v2/?quizId=7099175e-b4cb-46fd-8cdd-05b30075f38e">Look no further than this Kahoot!</a></i></p>
+                </div>
+            </div>
+            <p>
+                Following a review of basics, loops, and functions, both In-Person and Virtual mentors introduced our final project! In week 7, students and mentors will brainstorm a plan for success on our final projects! The final projects are completely open-ended and designed to showcase the Python Turtle Graphics programming skills students have picked up over the course of the fall&mdash;they provide a unique opportunity for students to tie together loops, functions, variables, and user input in a single program. 
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/proj12.png" width=95%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/project122.png" width=95%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <p><i>Students will be working on final projects in Week 7/8 and sharing them in Week 9&mdash;check out these example final projects from our mentors!</i></p>
+                </div>
+            </div>
+            <p>
+                Next Saturday, we'll work through a brief content review and dedicate the majority of time to brainstorming final projects. We're incredibly proud of all our students have accomplished this fall&mdash;we look forward to wrapping up Weeks 7 and 8 on a high note!
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Advisor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our faculty advisor, Dr. Emily Dolson!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle"> <!-- Dolson -->
+                        <img class="shadow-lg" src="assets/img/photos/emily750x1000_78R.jpg" width=40%>
+                        <br><br>
+                        <p><i>Dr. Emily Dolson (Virtual Advisor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" align="left"> <!-- Dolson -->
+                        <p>
+                            <b>What did you study?</b><br>
+                            I got my bachelor's degree at Swarthmore College, where I double-majored in Biology and Computer Science. I earned my PhD at MSU; it is a dual PhD in Computer Science and Engineering and Ecology, Evolution, and Behavior.
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I took a class on computer science for biologists my second semester of college, and after that I was hooked!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            Built a tool for doing data visualization in virtual reality.
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            Build a platform that makes it easier for scientists to study evolution inside a computer.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Don't be afraid to try things that might not work&mdash;that's one of the best ways to learn!
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                Enjoy the peak fall colors, Technovators&mdash;we'll see you Saturday for Week 7!
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 6 section -->
+
     <section class="news bg-light-gray">  <!-- begin Week 5 section -->
         <div class="container">
             <h2>Week 5</h2>
