--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -229,6 +229,8 @@
                 <li><a href="VirtualLessons/week4forloops.pdf" target="_blank" download>Week 4</a></li>
 
                 <li><a href="VirtualLessons/week5Virtual.pdf" target="_blank" download>Week 5</a></li>
+
+                <li><a href="VirtualLessons/week6lessonvirtual.pdf" target="_blank" download>Week 6</a></li>
             </ul>
              
 
