--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -234,7 +234,7 @@
 
                 <li><a href="VirtualLessons/week6lessonvirtual.pdf" target="_blank" download>Week 6</a></li>
 
-                <li><a href="VirtualLessons/Week7Lesson-Virtual.pdf target="_blank" download>Week 7</a></li>
+                <li><a href="VirtualLessons/Week7Lesson-Virtual.pdf" target="_blank" download>Week 7</a></li>
             </ul>
              
 
