--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -347,24 +347,19 @@
                     <div class="col-md-6" align="left"> <!-- Dobe -->
                         <p>
                             <b>What did you study?</b><br>
-                            I earned my PhD in Computer Science from KULeuven, Leuven, Belgium; my MSc of Computer Engineering from University of Tarbiat Modares, Tehran, Iran; and my BSc of Computer Engineering from University of Isfahan, Isfahan, Iran.  I also completed a post-doc at the University of Illinois at Urbana-Champaign.
-                        </p>
+                            Bachelor's in Computer Science and Engineering from India.                        </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            In my last year of high school, after I attended Computer Olympiads at the national level!
-                        </p>
+                            I started by learning LOGO (very similar to the python turtle some of us are learning here) and amazed at how we could easily convert our ideas into pictures on the screen.                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            There have been many times&mdash;I have enjoyed coding in all stages of my study. Coding has been a part of my daily life for many years. In terms of outcome, the most exciting time has been when I coded machine learning models and algorithms that can extract meaning from natural language text during my PhD research.  
-                        </p>
+                            I created a shopping website to sell my favorite badminton equipments.                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I am very excited about an ongoing project in my team about developing a Python library for machine learning that potentially can help experts outside computer science to design intelligent models for problem solving. 
-                        </p>
+                            I'm trying to understand how we reason about things and in turn teach a computer to do it.                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Listen, learn and gain knowledge and seek advice from your resources, knowledgeable people around you to carefully set your goals, then work hard and be stubborn in reaching your goals. In this way you can minimize the influence of discouraging biases and cheap roamers around you and be successful!
-                        </p>
+                            Always question why you are learning something.                         </p>
                     </div>
                 </div><br>
             </div>
