--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -303,48 +303,21 @@
 
             <h4 class="text-center">Advisor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford. This week, we'd like to introduce our faculty advisors Dr. Marilyn Wulfekuhler and Dr. Parisa Kordjamshidi!
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford. This week, we'd like to introduce our faculty advisor Oyendrilla Dobe!
             </p>
 
             <!------------------------------------------>
 
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
-                    <div class="col-md-6" align="middle"> <!-- Law -->
-                        <img class="shadow-lg" src="assets/img/photos/website_Yann-Meing_Law.JPG" width=50%>
-                        <br><br>
-                        <p><i>Dr. Law (In-Person Advisor)</i></p>
-                    </div>
-                    <div class="col-md-6" align="middle"> <!-- Dobe -->
+                    <div class="col-md-12" align="middle"> <!-- Dobe -->
                         <img class="shadow-lg" src="assets/img/photos/Oyendrila Dobe.JPG" width=50%>
                         <br><br>
                         <p><i>Oyendrilla Dobe (Virtual Advisor)</i></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6" align="left"> <!-- Law -->
-                        <p>
-                            <b>What did you study?</b><br>
-                            I received my BS in Computer Science from the University of Iowa; my MS in Computer Science from Tulane University; and my PhD in Computer Science from Michigan State University.
-                        </p>
-                        <p>
-                            <b>How did you become interested in computer science?</b><br>
-                            Watching Star Trek reruns as a kid, I wanted to be like Mr. Spock!
-                        </p>
-                        <p>
-                            <b>What's something cool you've done with computer science?</b><br>
-                            I wrote code to collect and process head and neck accelerations of humans and human analogs (crash dummies) for impact injury experiments at a Navy research lab.
-                        </p>
-                        <p>
-                            <b>What are you hoping to do with computer science in the future?</b><br>
-                            One of my goals is to make an old Big Mouth Billy Bass novelty item into an Alexa response device so that when you ask Alexa something, Billy Bass answers!
-                        </p>
-                        <p>
-                            <b>What advice do you have for our students?</b><br>
-                            Don't be afraid to experiment, and don't be afraid to make mistakes&mdash;just try it and see what happens.
-                        </p>
-                    </div>
-                    <div class="col-md-6" align="left"> <!-- Dobe -->
+                    <div class="col-md-12" align="middle"> <!-- Dobe -->
                         <p>
                             <b>What did you study?</b><br>
                             Bachelor's in Computer Science and Engineering from India.                        </p>
