--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -276,7 +276,7 @@
             </p>
             
             <p>
-                Virtual Cohorts had the priviledge to hear from two of our very own Ford Advisors! Ningfang joined the Green-Cohort and Taylor joined the White-Cohort. 
+                <b>Virtual</b>  Cohorts had the priviledge to hear from two of our very own Ford Advisors! Ningfang joined the Green-Cohort and Taylor joined the White-Cohort. 
             </p>
             <p>
                 As usual, our students followed-up on Ningfang's and Taylor's spotlight with an avalanche of great questions, spurring a lively discussion and sense of energy that persisted long after the session. Join us in thanking our Ford Advisors for generously sharing their Saturday morning with our students.
